<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartMenu">


    <Button
        android:text="@string/buttonKarten"
        android:id="@+id/kartenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:drawableTop="@drawable/penguins"/>

    <Button
        android:text="@string/buttonEbenen"
        android:id="@+id/ebenenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/kartenButton"
        android:drawableTop="@drawable/jellyfish"/>

    <Button
        android:text="@string/buttonFilter"
        android:id="@+id/filterButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ebenenButton"
        android:drawableTop="@drawable/lighthouse"/>

    <Button
        android:text="@string/buttonTouren"
        android:id="@+id/tourenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/filterButton"
        android:focusableInTouchMode="false"
        android:drawableTop="@drawable/desert"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/kartenOption"
        android:layout_toStartOf="@+id/filterButton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/radioButton4" />
    </RadioGroup>



</RelativeLayout>
